# ASPy

./: .coveragerc  .gitignore  README.md  pytest.sh  setup.cfg
src/: check_format.sh  format.sh
src/aspy/: __init__.py
src/aspy/antlr/: ASPCore.g4
src/aspy/grounding/: grounder.py
src/aspy/grounding/graphs/: component_graph.py  dependency_graph.py
src/aspy/grounding/propagation/: aggregates.py  choice.py
src/aspy/program/: operators.py  program.py  program_builder.py  query.py  substitution.py
src/aspy/program/literals/: aggregate.py  builtin.py  constants.py  guard.py  literal.py  predicate.py  special.py
src/aspy/program/statements/: __init__.py  choice.py  constraint.py  disjunctive.py  normal.py  rewrite.py  special.py  statement.py  weak_constraint.py
src/aspy/program/terms/: arithmetic.py  functional.py  special.py  term.py
src/tests/: conftest.py
src/tests/grounding/: test_grounder.py
src/tests/grounding/graphs/: test_component_graph.py  test_dependency_graph.py  test_scc.py  test_topological_sort.py
src/tests/grounding/propagation/: test_aggregate.py  test_choice.py
src/tests/program/: test_operators.py  test_program.py  test_query.py  test_safety_characterization.py  test_substitution.py  test_variable_table.py
src/tests/program/literals/: test_aggregate.py  test_builtin.py  test_guard.py  test_literal.py  test_naf.py  test_neg.py  test_predicate.py  test_special.py
src/tests/program/statements/: test_choice.py  test_constraint.py  test_disjunctive.py  test_normal.py  test_rewrite.py  test_special.py  test_weak_constraint.py
(+4 files in other folders)
