[metadata]
name = aspy
url = https://github.com/pdeibert/ASPy
author = attr: aspy.__author__
version = attr: aspy.__version__
description = Answer Set Programming in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ASP, Answer Set Programming, Logic Programming, Declarative Programming, Grounding

[options]
package_dir=
    = src
packages = find:
install_requires =
    antlr4-python3-runtime

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    aspy = aspy:main

[options.extras_require]
dev = pytest; pytest-cov; clingo